# ltr_tools

./: CMakeLists.txt  README.md
config/: paraview_config.pvsm  paraview_config_edit.pvsm
scripts/: inspectLtr.sh  ltrEditTrajectory.sh
src/: ltr2vtk_convertor.cpp  ltr_add_z_coord.cpp  main.cpp  vtk2ltr_convertor.cpp
